<resources>
    <string name="app_name">DbViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_customer_list">Customers</string>
    <string name="menu_service_list">Services</string>
    <string name="menu_hardware_list">Hardware List</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_service">Service</string>
    <string name="menu_hardware">HW</string>

    <string name="home_second">Home Second</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="second_description">Additional description</string>
    <string name="menu_home">Home</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="status">Status</string>
    <string name="showServices">Show customer\'s services</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="name">Name</string>
    <string name="showHardwares">Show service\'s hardwares</string>
    <string name="serial">Serial</string>
    <string name="address">Address</string>
    <string name="menu_address_list">Address List</string>
    <string name="showHardwaresOnAddress">Show all hardware on this address</string>
</resources>
