<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hardware_info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_hardware_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_hardware_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_hardware_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/serial" />

        <EditText
            android:id="@+id/et_hardware_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tv_hardware_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_column="1"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/sp_hardware_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tv_hardware_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_column="1"
            android:text="@string/address" />

        <Spinner
            android:id="@+id/sp_hardware_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/submit" />
    </TableRow>


</TableLayout>